Fix the page-shift problem.

--- a/_assets/stylesheets/less/theme-core.less
+++ b/_assets/stylesheets/less/theme-core.less
@@ -1,3 +1,9 @@
+// Fix "page shift" problem that happens on loading pages of different lengths
+html {
+  overflow-y: scroll;
+}
+
+
 // Navbar
 // -------------------------
 
